Tue Feb 12 06:49:39 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: should check
	  duplicated type definition.

	* net/loveruby/cflat/type/TypeTable.java: new method #isDefined.

	* net/loveruby/cflat/type/TypeTable.java (put): reject duplicated
	  type definition.

	* test/recursivetypedef.cb: test duplicated typedef.

	* test/test.sh: run it.

Tue Feb 12 06:23:21 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/type/TypeTable.java (semanticCheck): check
	  all types by checkRecursiveDefinition.  It is not efficient
	  because checking char, short, int, long, ... is not needed, but is
	  more reliable.

	* net/loveruby/cflat/type/TypeTable.java
	  (checkRecursiveDefinition): should traverse ArrayType.

	* net/loveruby/cflat/type/TypeTable.java
	  (checkRecursiveDefinition): should traverse ComplexType and
	  ArrayType (and UserType which points these types) *at the same
	  time*.

Tue Feb 12 00:45:47 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/TypeResolver.java: extract method
	  #defineTypes again.

	* net/loveruby/cflat/compiler/TypeResolver.java: define types by
	  TypeTable#put here.  Get typeref and type from TypeDefinition
	  nodes.

	* net/loveruby/cflat/type/TypeTable.java: remove #define.  Use
	  #put instead.

	* net/loveruby/cflat/ast/TypeDefinition.java: remove #defineIn.
	  Use #definingType instead.

	* net/loveruby/cflat/ast/StructNode.java: ditto.

	* net/loveruby/cflat/ast/UnionNode.java: ditto.

	* net/loveruby/cflat/ast/TypedefNode.java: ditto.

Tue Feb 12 00:35:37 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/type/TypeTable.java: remove deftype methods,
	  use #put instead.

	* net/loveruby/cflat/ast/StructNode.java: define type by myself,
	  calling TypeTable#put directly.

	* net/loveruby/cflat/ast/UnionNode.java: ditto.

	* net/loveruby/cflat/ast/TypedefNode.java: ditto.

Tue Feb 12 00:26:23 2008  Minero Aoki  <aamine@loveruby.net>
