@@ -1,3 +1,7 @@
+Mon Feb 18 02:30:44 2008  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/compiler/DereferenceChecker.java: add blanks.
+
 Tue Feb 12 06:49:39 2008  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/TypeResolver.java: should check
